cleanup old demo files, update procmod, update processing parse script